--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "gulp-compass": "^2.1.0",
-    "gulp-series": "^1.0.2"
+    "gulp-series": "^1.0.2",
+    "uglify-js": "^2.7.0"
   }
 }
